--- a/build.properties
+++ b/build.properties
@@ -2,7 +2,7 @@ src.dir = src
 asurite.id = dtdicker
 classes.dir = classes
 properties.dir = conf
-resources.dir = web
+resources.dir = resources
 tomcat.home = /Users/kevinagary/work/asu/classes/ser422/tomcat-8.5.24-8080
 app.name = Lab2
 dist.jar = ${app.name}.war
@@ -13,5 +13,9 @@ tomcat1.home = /home/diltdicker/Documents/School/SER-422/tomcat-8.5.24-8080
 tomcat2.home = /home/diltdicker/Documents/School/SER-422/tomcat-8.5.24-8081
 app1.name = Lab2Task1
 app2.name = Lab2Task2
-dist1.jar = ${app1.name}.war
-dist2.jar = ${app2.name}.war
+dist1.war = ${app1.name}.war
+dist2.war = ${app2.name}.war
+build1.home = Task1Build
+build2.home = Task2Build
+web1.xml = task1.xml
+web2.xml = task2.xml
